--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale-1">
+  <title>Day 1</title>
 </head>
 
-<body> Hello World!</body>
+<body> 
+  <h1>Hello World!</h1>
+</body>
+
 </html>
