--- a/index.html
+++ b/index.html
@@ -3,12 +3,30 @@
 
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale-1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Day 1</title>
+    <style class="bg-primary"></style>
   </head>
 
   <body> 
-    <h1>Hello World!</h1>
+    <header class="bg-primary text-center">
+      <h1>Hello World!</h1>
+      <h2>My Name is Brig!</h2>
+      <div>
+        <h3>Am I cool?</h3>
+        <button id = "yes" class ="" onclick="right()">Yes!</button>
+        <button id = "no" onclick="wrong()">No</button>
+      </div>
+    </header>
+
+    <main>
+      <div>
+
+      </div>
+    </main>
+
+    <script src="app.js"></script>
   </body>
 
 </html>
