added little info about me section to html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,18 @@
     </header>
 
     <main>
-      <div>
+      <div class="text-center bg-light">
+        <br>
+        <h3>A little about me:</h3>
+        <ul>
+          <li>I am the oldest of 7</li>
+          <li>I love to snowboard and other board sports</li>
+          <li>I enjoy building and shooting firearms</li>
+          <li>I like extreme sports</li>
+          <li>I am an avid video game and board game player</li>
+          <li>I have bowled a 299</li>
+        </ul>
+        <br>
 
       </div>
     </main>
