--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
       <div class="text-center bg-light">
         <br>
-        <h3>A little about me:</h3>
+        <h2>Fun Facts About Me:</h2>
         <ul>
           <li>I am the oldest of 7</li>
           <li>I love to snowboard and other board sports</li>
