--- a/index.html
+++ b/index.html
@@ -9,15 +9,9 @@
     <style class="bg-primary"></style>
   </head>
 
-  <body> 
-    <header class="bg-primary text-center">
-      <h1>Hello World!</h1>
+  <body class="bg-primary"> 
+    <header class="text-center">
       <h2>My Name is Brig!</h2>
-      <div>
-        <h3>Am I cool?</h3>
-        <button id = "yes" class ="" onclick="right()">Yes!</button>
-        <button id = "no" onclick="wrong()">No</button>
-      </div>
     </header>
 
     <main>
@@ -33,7 +27,11 @@
           <li>I have bowled a 299</li>
         </ul>
         <br>
-
+      </div>
+      <div class="text-center">
+        <h3>Am I cool?</h3>
+        <button id = "yes" class ="" onclick="right()">Yes!</button>
+        <button id = "no" onclick="wrong()">No</button>
       </div>
     </main>
 
